Bug 1561252 - Fix text wrapping in today pane. r=Paenglab
--HG--
extra : rebase_source : 018488373c8e6e5cbdcc108cce14a0a056c223d7

--- a/calendar/base/themes/common/today-pane.css
+++ b/calendar/base/themes/common/today-pane.css
@@ -264,15 +264,16 @@
   color: var(--sidebar-text-color);
 }
 
-agenda-header-richlist-item {
+richlistitem[is="agenda-header-richlist-item"] {
+  -moz-user-focus: normal;
+  display: block;
+}
+
+richlistitem[is="agenda-richlist-item"] {
   -moz-user-focus: normal;
 }
 
-agenda-richlist-item {
-  -moz-user-focus: normal;
-}
-
-agenda-allday-richlist-item {
+richlistitem[is="agenda-allday-richlist-item"] {
   -moz-user-focus: normal;
 }
 
